--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "milligram": "^1.3.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-google-maps": "^9.4.5",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.0"
   },
@@ -30,5 +31,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "markerwithlabel": "^2.0.2"
   }
 }
